# 2026-p1-divyanshddn146

./: README.md  pyproject.toml
todo/: __init__.py
todo/views/: routes.py
