[tool.poetry]
name = "2024-p1-rainsens"
version = "0.1.0"
package-mode = false
description = ""
authors = ["rainsen <yusen@rainsen.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
